<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraXSummaryFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/pv_display"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.camera.view.PreviewView>

    <ImageView
        android:id="@+id/iv_rect_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- <com.dipl.cameraxlib.ui.RectangleView
        android:id="@+id/recv_decoration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:innerHorizontalPadding="20dp"
        app:outerColor="#80ffffff"
        app:rectangleHeight="250dp" /> -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.dipl.cameraxlib.ui.RectangleView
            android:id="@+id/recv_decoration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:innerHorizontalPadding="@dimen/rectangle_inner_padding"
            app:outerColor="@color/rectangle_default_color"
            app:rectangleHeight="@dimen/rectangle_decoration_height" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:padding="0dp"
            android:text="@string/change_scan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_take_picture"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:padding="0dp"
            android:text="@string/take_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_swap_camera"
            app:layout_constraintStart_toEndOf="@id/btn_scanner" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_swap_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:padding="0dp"
            android:text="@string/swap_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_take_picture" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_scanner_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/current_mode"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_smedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/result"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/text_size_medium"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_scanner_mode"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
